--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -1,48 +1,58 @@
-.RectangleTitre{
-     position: absolute;
-     left: 0%;
-     right: 0%;
-     top: 0%;
-     bottom: 74.46%;
-
-     background: #FF6060;
-     border-radius: 5px;
-
-     h3 {
-     display: inline-block;
-     cursor: pointer;
-     position: absolute;
-     left: 1.77%;
-     //right: 88.46%;
-     //top: 3.12%;
-     bottom: 78.4%;
-     right: 88.46%;
-     top: 45.12%;
-
-     font-family: 'Montserrat';
-     font-style: normal;
-     font-weight: 500;
-     font-size: 24px;
-     line-height: 142.6%;
-     /* or 34px */
-
-     display: flex;
-     align-items: center;
-
-     color: #FFFFFF;
-
-     }
-     svg {
-          display: inline-block;
+.root {
+     @include collapse-apropos();
+     .apropos-collapsable1 {
+          //@include collapse-apropos();
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 20px;
+          position: relative;
+          top:406px;
+       
+        
+        
+          .RectangleTitre {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background: #FF6060;
+            border-radius: 5px;
+            cursor: pointer;
+            Width:1023px;
+            Height:47px;
+            
+            h3 {
+              margin: 0;
+              font-family: 'Montserrat';
+               font-style: normal;
+               font-weight: 500;
+               font-size: 24px;
+               line-height: 142.6%;
+               /* or 34px */
+     
+               display: flex;
+               align-items: center;
+     
+               color: #FFFFFF;font-family: 'Montserrat';
+               font-style: normal;
+               font-weight: 500;
+               font-size: 24px;
+               line-height: 142.6%;
+               /* or 34px */
+     
+               display: flex;
+               align-items: center;
+     
+               color: #FFFFFF;
+            }
+            svg {
+              width: 25px;
+              height: 25px;
+              display: inline-block;
           margin-left: 8px;
           transition: transform 0.3s ease;
           position: absolute;
-          //left: 8.75%;
-          //right: 42.63%;
-          //top: 75.67%;
-          //bottom: -58.17%;
-          //height: 23px;
-          //width: 14px;
+         
         
           left: 92.75%;
           right: 18.63%;
@@ -52,82 +62,266 @@
           font-size: 50px;
         
           color: #FFFFFF;
-        }
+            }
+          }
         
-        div + div {
-          overflow: hidden;
-          max-height: 0;
-          transition: max-height 0.3s ease;
-        }
-}
-.RectangleTexte{      
-     .bis{
-          height: 146px;
-          width: 1023px;
-          Top: 46px;
-          //border-radius: 5px;
-          background-color: #f7f7f7;
-
-     position: absolute;
-          p{
-               position: absolute;
-               left: 1.76%;
-               right: 2.64%;
-               top: 40.22%;
-               bottom: 10.33%;
-               height: 146px;
-               width: 1023px;
-
-               font-family: 'Montserrat';
+          .RectangleTexte {
+            overflow: hidden;
+            height: 0;
+            transition: height 0.3s ease-out;
+          }
+        
+          .RectangleTexte.open {
+            height: auto;
+            transition: height 0.3s ease-out;
+          }
+        
+          .bis {
+            padding: 20px;
+            background: #F7F7F7;
+            border-radius: 5px;
+            //width: 71%;
+            p {
+              margin: 0;
+              font-family: 'Montserrat';
                font-style: normal;
                font-weight: 400;
                font-size: 24px;
                line-height: 142.6%;
                /* or 34px */
-               //background: #f7f7f7;
 
+               //width: 71%;
+     
+     
                color: #FF6060;
+     
+            }
           }
-     }
+        }
+        .apropos-collapsable2 {
+          //@include collapse-apropos();
+      
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 20px;
+          position: relative;
+          //top:484px;
+          top: 422px;
+        
+          .RectangleTitre {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background: #FF6060;
+            border-radius: 5px;
+            cursor: pointer;
+            Width:1023px;
+            Height:47px;
+            
+            h3 {
+              margin: 0;
+              font-family: 'Montserrat';
+               font-style: normal;
+               font-weight: 500;
+               font-size: 24px;
+               line-height: 142.6%;
+               /* or 34px */
+     
+               display: flex;
+               align-items: center;
+     
+               color: #FFFFFF;
+            }
+            svg {
+              width: 25px;
+              height: 25px;
+            }
+          }
+        
+          .RectangleTexte {
+            overflow: hidden;
+            height: 0;
+            transition: height 0.3s ease-out;
+          }
+        
+          .RectangleTexte.open {
+            height: auto;
+            transition: height 0.3s ease-out;
+          }
+        
+          .bis {
+            padding: 20px;
+            background: #F7F7F7;
+            border-radius: 5px;
+            //width: 71%;
+            p {
+              margin: 0;
+              font-family: 'Montserrat';
+               font-style: normal;
+               font-weight: 400;
+               font-size: 24px;
+               line-height: 142.6%;
+               /* or 34px */
+               //width: 71%;
+     
+     
+               color: #FF6060;
+     
+            }
+          }
+        }
+        .apropos-collapsable3 {
+         // @include collapse-apropos();
+      
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 20px;
+          position: relative;
+          //top:699px;
+          top: 439px;
+        
+          .RectangleTitre {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background: #FF6060;
+            border-radius: 5px;
+            cursor: pointer;
+            Width:1023px;
+            Height:47px;
+            
+            h3 {
+              margin: 0;
+              font-family: 'Montserrat';
+               font-style: normal;
+               font-weight: 500;
+               font-size: 24px;
+               line-height: 142.6%;
+               /* or 34px */
+     
+               display: flex;
+               align-items: center;
+     
+               color: #FFFFFF;
+            }
+            svg {
+              width: 25px;
+              height: 25px;
+            }
+          }
+        
+          .RectangleTexte {
+            overflow: hidden;
+            height: 0;
+            transition: height 0.3s ease-out;
+          }
+        
+          .RectangleTexte.open {
+            height: auto;
+            transition: height 0.3s ease-out;
+          }
+        
+          .bis {
+            padding: 20px;
+            background: #F7F7F7;
+            border-radius: 5px;
+            //width: 71%;
+            p {
+              margin: 0;
+              font-family: 'Montserrat';
+               font-style: normal;
+               font-weight: 400;
+               font-size: 24px;
+               line-height: 142.6%;
+               /* or 34px */
+               //width: 71%;
+     
+     
+               color: #FF6060;
+     
+            }
+          }
+        }
+        .apropos-collapsable4 {
+          //@include collapse-apropos();
+      
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 20px;
+          position: relative;
+          //top:776px;
+          top: 454px;
+        
+          .RectangleTitre {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background: #FF6060;
+            border-radius: 5px;
+            cursor: pointer;
+            Width:1023px;
+            Height:47px;
+            
+            h3 {
+              margin: 0;
+              font-family: 'Montserrat';
+               font-style: normal;
+               font-weight: 500;
+               font-size: 24px;
+               line-height: 142.6%;
+               /* or 34px */
+     
+               display: flex;
+               align-items: center;
+     
+               color: #FFFFFF;
+            }
+            svg {
+              width: 25px;
+              height: 25px;
+            }
+          }
+        
+          .RectangleTexte {
+            overflow: hidden;
+            height: 0;
+            transition: height 0.3s ease-out;
+          }
+        
+          .RectangleTexte.open {
+            height: auto;
+            transition: height 0.3s ease-out;
+          }
+        
+          .bis {
+            padding: 20px;
+            background: #F7F7F7;
+            border-radius: 5px;
+            //width: 71%;
+            p {
+              margin: 0;
+              font-family: 'Montserrat';
+               font-style: normal;
+               font-weight: 400;
+               font-size: 24px;
+               line-height: 142.6%;
+               /* or 34px */
+              // width: 71%;
+     
+     
+               color: #FF6060;
+     
+            }
+          }
+        }
      
 }
 
-
-.apropos-collapsable1{
-     position: absolute;
-     width: 1023px;
-     height: 184px;
-     left: 208px;
-     //top: 484px;
-     top: 416px;
-    
+.root.all-open {
+     /* Styles pour la longueur de la page si tous les éléments sont ouverts */
+     @include pageLengthDaproposOpen();
     
    }
-.apropos-collapsable2{
-     position: absolute;
-     width: 1023px;
-     height: 184px;
-     left: 208px;
-     top: 625px;
-    
-    
-   }   
-.apropos-collapsable3{
-     position: absolute;
-     width: 1023px;
-     height: 184px;
-     left: 208px;
-     top: 842px;
-    
-    
-   }   
-.apropos-collapsable4{
-     position: absolute;
-     width: 1023px;
-     height: 184px;
-     left: 208px;
-     top: 1026px;
-    
-    
-
-   }   
