--- a/src/styles/_apropos.scss
+++ b/src/styles/_apropos.scss
@@ -1,5 +1,6 @@
 .kasa-apropos{
      @include pageLengthdesktop();
+     margin-bottom: 150px;
      .kasa-apropos-section1{
           position: absolute;
           width: 1240px;
