--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -5,9 +5,15 @@
      width: 1440px;
      height: 209px;
      background: #000000;
-    
+     //bottom: 0;
      //top: 4333px;
-     top: 2269px;
+     // page accueil 
+     //top: 2269px;
+     // page apropos collapses fermes et collapses ouverts
+
+     //top:150px;
+
+
      
      
      .kasa-footer-elements{
