--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -3,9 +3,9 @@
 
 .kasa-home {
      @include pageLengthdesktop();
-     
-     
+     margin-bottom: 2250px;
 }
+
 .kasa-home-body {
    
      position: absolute;
