--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -7,7 +7,8 @@
      width: 1440px;
      height: 1024px;
 
-     background: #FFFFFF;
+     //background: #FFFFFF;
+     
 }
 
 @mixin pageLengthmobile{
@@ -30,6 +31,9 @@
      position: absolute;
      //width: 1440px;
      height: 1333px;
+        
+     //height: 1400px;
+     //flex-grow: 1;
      
     
 }
@@ -39,3 +43,4 @@
      height: 30px;
      left: 20px;
 }
+
